--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,6 @@
 agp = "8.4.0"
 kotlin = "2.0.10"
 coreKtx = "1.13.1"
-junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.6"
 activityCompose = "1.9.3"
 composeBom = "2023.08.00"
@@ -12,6 +9,7 @@ serialization = "2.0.21"
 serialization-json = "1.7.3"
 ktor = "3.0.0"
 navigation = "2.8.3"
+koinBom = "3.6.0-wasm-alpha2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +28,14 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+
+koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koinBom" }
+koin-core = { module = "io.insert-koin:koin-core" }
+koin-android = {module = "io.insert-koin:koin-android", version.ref = "koinBom" }
+koin-navigation = {module = "io.insert-koin:koin-androidx-navigation", version.ref = "koinBom" }
+koin-compose = {module = "io.insert-koin:koin-androidx-compose", version.ref = "koinBom" }
+koin-viewmodel = { module = "io.insert-koin:koin-compose", version.ref = "koinBom" }
+
 
 
 [plugins]
